<resources>
    <string name="app_name">Plantory</string>
    <string name="addplant_plant_nickname_hint">식물에게 별명을 지어주세요.</string>
    <string name="addplant_plant_species_hint">식물의 종을 입력하세요.</string>
    <string name="addplant_plant_description_hint">식물을 한 줄을 간단히 설명해주세요.</string>
    <string name="base_addbtn_text">등록하기</string>
    <string name="addplant_plant_description">한줄소개</string>
    <string name="addplant_plant_species">식물종</string>
    <string name="addplant_plant_nickname">별명</string>
    <string name="addplant_plant_birthday">생일</string>
    <string name="addplant_page_text">식물 추가하기</string>

    <string name="home_plant_dday">%s와 함께한지\n%d일</string>
    <string name="home_plant_nickname">별명</string>
    <string name="home_plant_species">식물종</string>
    <string name="home_plant_description">한줄소개</string>
    <string name="home_plant_add_plant_item">새로운 식물을\n추가해보세요</string>
    <string name="home_plant_blank"> </string>
    <string name="home_carbon_title">식물 한개당 연간 6000mg의 탄소를 흡수할 수 있어요!</string>
    <string name="home_carbon_body">현재 탄소 절감 중</string>
    <string name="home_carbon_mg">mg</string>
    <string name="home_carbon_empty">식물을 추가해 탄소를 저감해 보세요:)</string>

    <string name="notification_title">알림센터</string>

    <string name="diary_title">일지</string>
    <string name="diary_nickname">%s의 기록</string>
    <string name="diary_watered">오늘 물을 주었어요</string>
    <string name="diary_repoted">오늘 분갈이를 했어요</string>

    <string name="upload_title">일지 기록하기</string>
    <string name="upload_nickname">%s의 기록</string>
    <string name="upload_hint">%s는 오늘 어땠나요? 기록을 작성해주세요.</string>
    <string name="upload_text">기록</string>
    <string name="upload_btn">%s의 일지 기록하기</string>

    <string name="detail_dday">%d일</string>
    <string name="detail_plant_species">식물종</string>
    <string name="detail_description">한줄소개</string>
    <string name="detail_text">%s의 성장일기</string>
    <string name="detail_empty_record_message">기록을 작성해주세요</string>

</resources>
