<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_home_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_home_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_home_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_home_add">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/l_home_refresh"
                android:layout_width="match_parent"
                android:layout_height="560dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_home_plant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/di_home_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:dotsColor="@color/gray_100"
                app:dotsCornerRadius="8dp"
                app:dotsSize="10dp"
                app:dotsSpacing="8dp"
                app:dotsWidthFactor="2.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l_home_refresh"
                app:selectedDotColor="@color/gray_800" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_carbon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray_50_fill_15"
            android:paddingVertical="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_home">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_home_carbon_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_carbon_title"
                android:textAppearance="@style/TextAppearance.PLANTORY.Headline_b_14"
                android:textColor="@color/gray_carbon"
                android:layout_marginBottom="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cl_carbon"
                app:layout_constraintBottom_toTopOf="@+id/cl_home_carbon_text"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_home_carbon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_carbon_title"
                app:layout_constraintBottom_toBottomOf="@id/cl_carbon">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_home_carbon_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_carbon_body"
                    android:textAppearance="@style/TextAppearance.PLANTORY.Headline_b_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_home_carbon_content_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.PLANTORY.Headline_b_24"
                    android:textColor="@color/mint"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_home_carbon_content"
                    app:layout_constraintStart_toEndOf="@+id/tv_home_carbon_content"
                    app:layout_constraintTop_toTopOf="@id/tv_home_carbon_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_home_carbon_mg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_carbon_mg"
                    android:textAppearance="@style/TextAppearance.PLANTORY.Headline_b_11"
                    android:textColor="@color/gray_carbon"
                    android:layout_marginStart="3dp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_home_carbon_content"
                    app:layout_constraintStart_toEndOf="@id/tv_home_carbon_content_number"
                    app:layout_constraintTop_toTopOf="@id/tv_home_carbon_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
